Add GitHub Actions configuration and example files

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
+# Telegram Bot Token
 API_TOKEN=your_telegram_bot_token
+
+# Spotify API Credentials
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+
+# Yandex Music Token
 YANDEX_TOKEN=your_yandex_music_token
+
+# Supabase Configuration
 SUPABASE_URL=your_supabase_url
 SUPABASE_KEY=your_supabase_key
+
+# Server Configuration (for GitHub Actions)
+SSH_HOST=your_server_ip
+SSH_USERNAME=root
+SSH_PRIVATE_KEY=your_ssh_private_key
 
 # Proxy settings (optional)
 PROXY_LIST=http://proxy1:port,http://proxy2:port 
